--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ std = []
 [dependencies]
 serde = { version = "1.0", features = ["derive"], optional = true }
 fuzzcheck = { git = "https://github.com/tezedge/fuzzcheck-rs.git" }
+enum_dispatch = "0.3.7"
