--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,11 @@ codecov = { repository = "redux-rs/redux-rs" }
 [features]
 default = ["std"]
 std = []
+fuzzing = ["fuzzcheck"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"], optional = true }
-fuzzcheck = { git = "https://github.com/tezedge/fuzzcheck-rs.git" }
+fuzzcheck = { git = "https://github.com/tezedge/fuzzcheck-rs.git", optional = true }
 enum_dispatch = "0.3.7"
+
+
